[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.10.2",
    "gymnasium>=1.1.1",
    "h5py>=3.13.0",
    "huggingface-hub>=0.29.3",
    "hydra-core>=1.3.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pygame>=2.6.1",
    "torch>=2.6.0",
    "torcheval>=0.0.7",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]

[project.optional-dependencies]
dev = [
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "jupyter_contrib_nbextensions",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "Q"]
ignore = ["Q000", "E225", "E226"]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.setuptools.packages.find]
include = ["diamond*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pyright]
include = ["diamond*"]
pythonVersion = "3.13"
